--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  table_calendar: ^2.3.3
+  intl: ^0.16.1
+  sqflite: ^1.3.0
+  path_provider: ^1.6.24
 
 dev_dependencies:
   flutter_test:
